2019-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* rungm.sh.in (DIRSEP): DIRSEP should always use Unix conventions for
	Autotools-based builds.

	* magick/module.h ("C"): Eliminiate redundant and conflicting
	ListModuleInfo() prototype.

	* coders/miff.c (ReadMIFFImage): Eliminate warnings in trace
	statements.

	* coders/dib.c (DecodeImage): Eliminate warnings in trace
	statements.

	* coders/bmp.c (DecodeImage): Eliminate warnings in trace
	statements.

	* magick/studio.h (SupportMagickModules): Fix the preprocessor
	logic controlling SupportMagickModules, which became broken for
	GCC MinGW-based builds starting in the 1.3.29 release when a
	"static" module loader was implemented.  Due to an error in the
	preprocessor logic, only the "modules" based build was working for
	MinGW.  Much thanks to Giovanni Remigi for making us aware of this
	issue.

2019-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pict.c (WritePICTImage): Throw a writer exception if the
	PICT width limit is exceeded. Fixes SourceForge issue 617
	"heap-buffer-overflow in function EncodeImage of coders/pict.c".

2019-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* jbig: jbigkit is updated to 2.1 release.

	* libxml: libxml2 is updated to 2.9.10 release.

	* bzlib: bzip is updated to 1.0.8 release.

	* zlib: zlib is updated to 1.2.11 release.

	* png: libpng is updated to 1.6.37 release.

2019-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lcms: lcms2 is updated to 2.9 release.

	* tiff: libtiff is updated to 4.1.0 release.

2019-11-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPatternPath): Don't leak memory if
	fill_pattern or stroke_pattern of cloned draw_info are not null.
	Fixes oss-fuzz issue 18948 "graphicsmagick:coder_MVG_fuzzer:
	Indirect-leak in CloneImage".
	(PrimitiveInfoRealloc): Clear freshly-allocated PrimitiveInfo
	memory.

2019-11-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
