@@ -1,3 +1,7 @@
+2019-04-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+        *magick\nt_base.c Fix user only installation of Ghostscript.
+
+
 2019-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* rungm.sh.in (DIRSEP): DIRSEP should always use Unix conventions for
